<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home_menu_title" />
        <item
            android:id="@+id/companies"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/companie_menu_title" />
        <item
            android:id="@+id/stock"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/stock_menu_title" />
        <item
            android:id="@+id/charts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/charts_menu_title" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/news_menu_title" />
        <item
            android:id="@+id/indicators"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/indicator_menu_title" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/search_menu_title" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile_menu_title" />
        <item
            android:id="@+id/log"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/log_menu_title" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/exit_menu_title" />

    </group>

</menu>
